--- a/OmOss.html
+++ b/OmOss.html
@@ -24,7 +24,7 @@
     <nav>
       <!-- Your navigation menu goes here -->
       <ul>
-        <li><a href="./Forside.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="./kontaktOss.html">Contact</a></li>
       </ul>
