--- a/kontaktOss.html
+++ b/kontaktOss.html
@@ -24,7 +24,7 @@
     <nav>
         <!-- Your navigation menu goes here -->
         <ul>
-            <li><a href="./Forside.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./OmOss.html">About</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
